--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for "Name">Name</label>
+		<input type="text" id="name" placeholder="Name">
+		<br><br>
+		<label for="Phone Number">Phone Number</label>
+		<input type="text" id="phone" placeholder="Phone Number">
+		<br><br>
+		<label for "Address">Address</label>
+		<input type="text" id="Address" placeholder="Address">
+		<br><br>
+		<label for "Have you ever lived before with a Dog? ">Have you ever lived before with a Dog?</label>
+		<input type="checkbox" id="checkbox" value="Have you ever lived before with a Dog?">
+		<br><br>
+		<label for "Please select your prefferd breeds">Please select your prefferd breeds :</label>
+		<select id="multiSelect" name="Please select your prefferd breeds" multiple>
+			<option>Bulldog</option>
+			<optgroup>German</optgroup>
+			<optgroup>Poodler</optgroup>
+		</select>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
